# DocuConversion

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml  vercel.json
.claude/: launch.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  schema.sql
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  advanced.py  ai.py  convert.py  developer.py  edit.py  jobs.py  organize.py  payments.py  preview.py  secure.py  share.py  sign.py
backend/app/core/: auth.py  config.py  dependencies.py  exceptions.py  logging_config.py  rate_limiter.py  tier_middleware.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  ai_service.py  api_key_service.py  converter.py  editor.py  job_manager.py  organizer.py  payment.py  pdf_diff.py  security.py  share_service.py  signer.py  storage.py
backend/app/utils/: file_validation.py
backend/tests/: __init__.py
backend/tests/services/: test_converter.py  test_organizer.py
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/hooks/: index.ts  useAiProcessor.ts  useEditorState.ts  useFileProcessor.ts  useKeyboardShortcuts.ts
frontend/src/lib/: api-client.ts  auth.ts  constants.ts  env.ts  file-history.ts  format.ts  posthog.ts  pricing-data.ts  seo.ts  signatures.ts  utils.ts
(+123 files in other folders)
